--- a/Number Speaker/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Number Speaker/en.lproj/MainStoryboard_iPhone.storyboard
@@ -39,6 +39,13 @@
                                             <action selector="screenTouched:" destination="2" eventType="touchUpInside" id="tdS-Zk-dQQ"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap number to speak it!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Hqq-VB-gEu">
+                                        <rect key="frame" x="74" y="5" width="132" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="0.84999999999999998" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
